GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program; if not, write to the Free Software
Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307, USA.

============================================================

PyKota NEWS :

    - 1.19alpha10 :
    
        - 25% Speedup in PCL parser. Getting more of the Python version
          will probably be difficult, since the completely table driven 
          parser I wrote is slower than the original algorithm. Then,
          the original algorithm is still used for now.
          Probable that more speed could be achieved using mmap, at the
          expense of severe memory consumption.
        
        - configuration simplifications : the "accounter" directive's
          'hardware' arguments now accepts what was in the "requester"
          directive as it's content. The "requester" directive is not
          supported anymore. See sample configuration file for details.
        
    - 1.19alpha9 :
       
        - pkpgcounter is now just a wrapper around the PDLAnalyzer class
        
        - pykotaOptions LDAP attribute now accepts non-ascii characters
          too.
          
        - First try at cupspykota main loop rewrite
        
    - 1.19alpha8 :
    
        - 'querying' accounting method is now called 'hardware'
        
        - 'external' accounting method is now called 'software'
        
        - 'stupid' accounting method doesn't exist anymore
        
        - 'snmp' requester doesn't exist anymore
        
        - code simplifications in external requester
        
    - 1.19alpha7 :
     
        - Database schema change (both LDAP and PostgreSQL) to
          allow storage of the job-originating-hostname attribute.
          An SQL upgrade script is present. The code is not yet
          capable of setting/retrieving this attribute. Support